[package]
name = "nrm-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
rust-ini = "0.18"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
lazy_static = "1.4.0"